--- a/Project.Rmd
+++ b/Project.Rmd
@@ -14,7 +14,7 @@ output:
     fig_caption: true
 ---
 ## Executive Summary
-You should create a report describing how you built your model, how you used cross validation, what you think the expected out of sample error is, and why you made the choices you did.
+The best prediction model was built when using the "kth nearest neighbor" method to train the model. Up to 93% accuracy was achieved on the training data.  
 
 ## Reproducible Environment
 The following chunk of code loads the libraries used in the analysis of the data.  Also, by setting a seed to a fixed value, will guarantee that the all the code in this report will produce the same results as another person running the code.
@@ -26,20 +26,19 @@ library(lattice);
 library(caret);
 library(rpart);
 library(rpart.plot);
-#library(randomForest);
 library(rattle);
 
 # Define seed to reproduce "randomness"
 set.seed(1989);  
 ``` 
 
-## Data
+## Data Preparation
 Test subjects were asked to perform barbell lifts correctly and incorrectly in 5 different ways. More information is available from the website here: [More Info](http://groupware.les.inf.puc-rio.br/har) (see the section on the Weight Lifting Exercise Dataset).
 The training data for this project are available here:  
 [Training Data Link](https://d396qusza40orc.cloudfront.net/predmachlearn/pml-training.csv)  
 The test data are available here:  
 [Testing Data Link](https://d396qusza40orc.cloudfront.net/predmachlearn/pml-testing.csv)  
-Important: you are free to use this dataset for any purpose. This dataset is licensed under the Creative Commons license (CC BY-SA). The CC BY-SA license means you can remix, tweak, and build upon this work even for commercial purposes, as long as you credit the authors of the original work and you license your new creations under the identical terms we are licensing to you. This license is often compared to "copyleft" free and open source software licenses. All new works based on this dataset will carry the same license, so any derivatives will also allow commercial use.
+_Important_: you are free to use this dataset for any purpose. This dataset is licensed under the Creative Commons license (CC BY-SA). The CC BY-SA license means you can remix, tweak, and build upon this work even for commercial purposes, as long as you credit the authors of the original work and you license your new creations under the identical terms we are licensing to you. This license is often compared to "copyleft" free and open source software licenses. All new works based on this dataset will carry the same license, so any derivatives will also allow commercial use.
 
 <cite>Velloso, E.; Bulling, A.; Gellersen, H.; Ugulino, W.; Fuks, H. Qualitative Activity Recognition of Weight Lifting Exercises. Proceedings of 4th International Conference in Cooperation with SIGCHI (Augmented Human '13) . Stuttgart, Germany: ACM SIGCHI, 2013.</cite>
 
@@ -51,7 +50,7 @@ training <- read.csv("data/pml-training.csv", header=TRUE);
 dim(training);
 ``` 
 
-## Data Preparation
+### Discard Useless Predictors 
 Not all of the `r sprintf("%d",dim(training)[2])` variables in the training dataset will be used as predictors for the prediction model.  Variables where the majority of its values are labeled as NA (missing) will be excluded. Also excluded, will be variables that are associated with the test subject's identity and variables related to date/time.
 ```{r, tidy=TRUE}
 # Define array with names of useless variables
@@ -69,8 +68,9 @@ drops <- c(
   "max_roll_forearm",       "max_yaw_arm",           "min_pitch_arm",          
   "min_pitch_belt",         "min_pitch_dumbbell",    "min_pitch_forearm",            
   "min_roll_arm",           "min_roll_belt",         "min_roll_dumbbell",             
-  "min_roll_forearm",       "min_yaw_arm",           "raw_timestamp_part_1",           
-  "raw_timestamp_part_2",   "stddev_pitch_arm",      "stddev_pitch_belt",               
+  "min_roll_forearm",       "min_yaw_arm",           "num_window", 
+  "raw_timestamp_part_1",   "raw_timestamp_part_2",  
+  "stddev_pitch_arm",       "stddev_pitch_belt",               
   "stddev_pitch_dumbbell",  "stddev_pitch_forearm",  "stddev_roll_arm",                  
   "stddev_roll_belt",       "stddev_roll_dumbbell",  "stddev_roll_forearm",               
   "stddev_yaw_arm",         "stddev_yaw_belt",       "stddev_yaw_dumbbell",                
@@ -84,61 +84,87 @@ drops <- c(
 );
 # Filter out useless variables
 training.filt <- training[,!(names(training) %in% drops)];
-testing.filt  <- testing[,!(names(training) %in% drops)];
 dim(training.filt);
+rm(drops);
 ```
 By removing these variables, the number of possible predictors to sort through is `r sprintf("%d",dim(training.filt)[2]-1)`.
 
-### Zero or Near Zero Variance Predictors
+### Discard Zero or Near Zero Variance Predictors
 Create subset of training data that removes variables whose variance are small.
 ```{r, tidy=TRUE}
-nzv <- nearZeroVar(training.filt);
-training.filt <- training.filt[, -nzv];
-testing.filt  <- testing.filt[, -nzv];
-dim(training.filt);
+nzv <- nearZeroVar(training.filt[,!(names(training.filt) %in% c("classe"))]);
+training.nzv <- training.filt[, -nzv];
+dim(training.nzv);
+rm(nzv);
 ```
 
-### Correated Predictors
+### Discard Highly Correlated Predictors
 Reduce the level of correlation between the predictors. The code chunk below shows the effect of removing descriptors with absolute correlations above 0.75. 
-```{r, tidy=TRUE}
-corr <- findCorrelation(cor(training.filt[,1:53]), cutoff=0.75);
-training.filt <- training.filt[, -corr];
-testing.filt  <- testing.filt[, -corr];
-dim(training.filt);
+
+```{r , tidy=TRUE}
+corr <- cor(training.nzv[,!(names(training.nzv) %in% c("classe"))]);
+training.corr75 <- training.nzv[, -findCorrelation(corr, cutoff=0.75)];
+training.corr50 <- training.nzv[, -findCorrelation(corr, cutoff=0.50)];
+dim(training.corr75);
+dim(training.corr50);
+rm(corr);
 ```
 The number of possible predictors are now at `r sprintf("%d",dim(training.filt)[2]-1)`.  This will be the final set of predictors used to build the eventual prediction model.
 
-## Model
+## Models
+_caret_ has a function called _train_ for use over 147 models with different resampling methods.  Using the training data to build 3 prediction models with the _train_ function. The performance of each will be evaluated.  Only 3 models were built because The computing/memory capacity of the system used to perform this analysis limits the scope of the models that can be reasonably calculated.  The 3 models built were:
 
-```{r, tidy=TRUE}
-pp <- c("center","scale"); # 
-model1 <- train(classe~.,training.filt,method="knn",  preProcess=pp, verbose=FALSE); # 
-model2 <- train(classe~.,training.filt,method="nnet", preProcess=pp, verbose=FALSE); #
-model3 <- train(classe~.,training.filt,method="rpart",preProcess=pp, verbose=FALSE); # Trees
-#model4 <- train(classe~.,training.filt,method="gbm",  preProcess=pp, verbose=FALSE); # boosting
-#model4 <- train(classe~.,training.filt,method="rf",    preProcess=pp);   # Random forests
-#model5 <- train(classe~.,training.filt,method="bagEarth",preProcess=pp); # Bagged Trees
+1. Kth Nearest Neigbhor
+2. Neural Network
+3. Tree Partition
+
+```{r models, tidy=TRUE, echo=FALSE}
+model1 <- train(classe~.,training.corr50,method="knn",  preProcess=c("center","scale")); 
+#model2 <- train(classe~.,training.corr75,method="nnet", preProcess=c("center","scale")); 
+#model3 <- train(classe~.,training.corr50,method="rpart",preProcess=c("center","scale")); 
 ```
 
-```{r, tidy=TRUE}
+### Classification Performance
+Display the "confusion matrix" for each of the created models.  A “confusion matrix” is a cross–tabulation of the observed and predicted classes. The higher the sum of the values across the table's diagonal then the better that overall model's overall classification performance. 
 
-#fancyRpartPlot(model3$finalModel);
-
+```{r classPerf, tidy=TRUE}
 confusionMatrix(model1);
-confusionMatrix(model2);
-confusionMatrix(model3);
-#confusionMatrix(model4);
-#confusionMatrix(model5);
-
-pred1 <- predict(model1,newdata=testing.filt);
-pred2 <- predict(model2,newdata=testing.filt);
-pred3 <- predict(model3,newdata=testing.filt);
-#pred4 <- predict(model4,newdata=testing.filt);
-#pred5 <- predict(model5,newdata=testing.filt);
+#confusionMatrix(model2);
+#confusionMatrix(model3);
 ```
-### Cross-Validation
-### Out of Sample Error
-## Conclusion
 
+### Prediction on Testing Dataset
+Apply models against the testing dataset.
+
+```{r prediction, tidy=TRUE}
+pred1 <- predict(model1,newdata=testing);
+#pred2 <- predict(model2,newdata=testing);
+#pred3 <- predict(model3,newdata=testing);
+```
+
+## Cross-Validation
+K–Nearest Neighbors method incorporates croos validation over bootstrapped samples.
+
+### Assignment Writeup
+Apply the best machine learning model built to each of the 20 test cases in the testing data set. For each test case create a text file with a single capital letter (A, B, C, D, or E) corresponding to the prediction for the corresponding problem in the test data set. 
+
+```{r conclusion, tidy=TRUE}
+
+pml_write_files = function(x){
+  n = length(x)
+  for(i in 1:n){
+    filename = paste0("text/problem_id_",i,".txt")
+    write.table(x[i],file=filename,quote=FALSE,row.names=FALSE,col.names=FALSE)
+  }
+}
+
+#pml_write_files(as.character(pred1));
+```
+
+## Appendix
+Plot of 
+```{r appendix, tidy=TRUE}
+#fancyRpartPlot(model3$finalModel);
+```
 
  
